# youtube-summarizer

./: .env  .env.sample  .gitattributes  .gitignore  API_README.md  DOCKER_README.txt  Dockerfile  README-postman.md  README.md  YouTube Summarizer API.postman_collection.json  app.py  curl_examples.md  fix_storage.py  ip_logs.txt  main.py  mongodb_patch.py  pyproject.toml  pytubefix_tokens.json  requirements.txt  test.py  test_cache.py  youtube_summarizer_environment.json  youtube_summarizer_postman_collection.json
config/: settings.py
instance/: ip_logs.db
models/: api_middleware.py  auth.py  auth_jwt.py  db.py  ip_logs.py  mongodb.py  user_manager.py
pytubefix/: innertube.py
static/: ads.txt  auth.js  style.css
static/css/: style.css
static/js/: script.js
temp/: LRzqQQbl47Q_transcript.txt
templates/: admin_dashboard.html  admin_ip_logs.html  admin_login.html  api_keys.html  base.html  dashboard.html  index.html  index.html.backup  index.html.fixed  ip_logs.html  login.html  my_videos.html  profile.html  register.html  summary.html  transcript.html  user_dashboard.html  user_login.html  video_detail.html
utils/: __init__.py  auth.py  summarization.py  transcription.py  youtube.py
utils/pytubefix/__cache__/: tokens.json
